<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background2"
    tools:context="com.example.alexalves.vestibulapp.Inscricao_TipoAtendEspecializadoActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#0065ca"
        android:id="@+id/cabecalho"
        android:orientation="horizontal"
        android:padding="5dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/especializado"
            android:id="@+id/textView2"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:background="#ffea00"
        android:layout_height="wrap_content"
        android:id="@+id/rodape">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/btnProsseguir"
            android:id="@+id/btnProsseguir"
            android:background="#ff6f00"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cabecalho"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        android:id="@+id/scrollView3">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/deficiencia"
                android:id="@+id/textView5"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />


            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/surdocegueira"
                android:id="@+id/checkBox"
                android:layout_below="@+id/textView5"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auditiva"
                android:id="@+id/checkBox1"
                android:layout_below="@+id/checkBox"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visao"
                android:id="@+id/checkBox2"
                android:layout_below="@+id/checkBox1"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fisica"
                android:id="@+id/checkBox3"
                android:layout_below="@+id/checkBox2"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/autismo"
                android:id="@+id/checkBox4"
                android:layout_below="@+id/checkBox3"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discalculia"
                android:id="@+id/checkBox5"
                android:layout_below="@+id/checkBox4"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/outraDeficiencia"
                android:id="@+id/checkBox6"
                android:layout_below="@+id/checkBox5"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cegueira"
                android:id="@+id/checkBox7"
                android:layout_above="@+id/checkBox1"
                android:layout_alignRight="@+id/checkBox6"
                android:layout_alignEnd="@+id/checkBox6" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/surdez"
                android:id="@+id/checkBox8"
                android:layout_above="@+id/checkBox9"
                android:layout_alignLeft="@+id/checkBox7"
                android:layout_alignStart="@+id/checkBox7" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monocular"
                android:id="@+id/checkBox9"
                android:layout_above="@+id/checkBox3"
                android:layout_alignLeft="@+id/checkBox8"
                android:layout_alignStart="@+id/checkBox8" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intelectual"
                android:id="@+id/checkBox10"
                android:textSize="12dp"
                android:layout_alignTop="@+id/checkBox3"
                android:layout_alignLeft="@+id/checkBox9"
                android:layout_alignStart="@+id/checkBox9" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dislexia"
                android:id="@+id/checkBox11"
                android:layout_below="@+id/checkBox10"
                android:layout_alignLeft="@+id/checkBox10"
                android:layout_alignStart="@+id/checkBox10" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deficit"
                android:id="@+id/checkBox12"
                android:layout_above="@+id/checkBox6"
                android:layout_alignLeft="@+id/checkBox11"
                android:layout_alignStart="@+id/checkBox11" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/declaraDeficiencia"
                android:layout_marginTop="20dp"
                android:textSize="12dp"
                android:id="@+id/checkBox13"
                android:layout_below="@+id/checkBox6"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />


        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
