<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background2"
    tools:context="com.example.alexalves.vestibulapp.Inscricao_TipoAtendEspecificoActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#0065ca"
        android:id="@+id/cabecalho"
        android:orientation="horizontal"
        android:padding="5dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/especifico"
            android:id="@+id/textView2"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:background="#ffea00"
        android:layout_height="wrap_content"
        android:id="@+id/rodape">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/btnProsseguir"
            android:id="@+id/btnProsseguir"
            android:background="#ff6f00"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cabecalho"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        android:id="@+id/scrollView3">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/atendimento"
                android:id="@+id/textView5"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />


            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gestante"
                android:id="@+id/checkBox"
                android:layout_below="@+id/textView5"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lactante"
                android:id="@+id/checkBox1"
                android:layout_below="@+id/checkBox"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hospitalar"
                android:id="@+id/checkBox2"
                android:layout_below="@+id/checkBox1"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sabado"
                android:id="@+id/checkBox3"
                android:layout_below="@+id/checkBox2"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/atencaoAtendimento"
                android:textSize="16dp"
                android:textColor="#F00"
                android:id="@+id/textView"
                android:layout_below="@+id/checkBox3"
                android:layout_centerHorizontal="true"
                android:textAlignment="inherit"
                android:layout_marginTop="50dp"/>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
