<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="com.example.alexalves.vestibulapp.IndexActivity">

    <Button
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:text="@string/btnOrientacao"
        android:id="@+id/btnOrientacao"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@android:drawable/alert_light_frame" />

    <Button
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:text="@string/btnInscricao"
        android:id="@+id/btnInscricao"
        android:layout_below="@id/btnOrientacao"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@android:drawable/alert_light_frame" />

    <Button
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:text="@string/btnAreaParticipante"
        android:id="@+id/btnParticipante"
        android:layout_below="@id/btnInscricao"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@android:drawable/alert_light_frame" />

    <Button
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:text="@string/btnUIT"
        android:id="@+id/btnUIT"
        android:layout_below="@id/btnParticipante"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@android:drawable/alert_light_frame" />

</RelativeLayout>
